# server/chat/data/chat_actions.ts
@@ -901,6 +901,7 @@ function sendChatMessageForAccount(
                 chatId,
                 messageIndex,
                 createdTime,
+                createdTimeZone,
                 authorId,
                 mentionedAccountIds,
                 isContentSnippetComplete: contentSnippet.nodeSize === content.nodeSize,
