# shared/api/api_specification.yaml
@@ -2375,7 +2375,7 @@ components:
 
         BotWebhookNewMessageEvent:
             type: object
-            required: [type, roomPath, index, authorId]
+            required: [type, roomPath, index, authorId, createdTimeZone]
             additionalProperties: false
             properties:
                 type:
@@ -2387,6 +2387,8 @@ components:
                     minimum: 0
                 authorId:
                     $ref: "#/components/schemas/AccountId"
+                createdTimeZone:
+                    $ref: "#/components/schemas/TimeZone"
                 wasMentioned:
                     type: boolean
 
